# metamask-bruteforce

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: release.yml
docs/: README.org
src/: address.rs  api.rs  generator.rs  lib.rs  main.rs  ui.rs
