[package]
name = "metamask-bruteforce-v3"
version = "0.1.0"
edition = "2021"

[lib]
name = "metamask_bruteforce"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dotenv = "0.15.0"
ethers-signers = "2.0.8"
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
rand = "0.8.5"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.175", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.2"
tiny-bip39 = { version = "1.0.0", default-features = false }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
